# portboard

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  ROADMAP.md  SECURITY.md  install.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release-pr-policy.yml  release.yml
docs/: architecture.md  idea.zh-CN.md  releasing.md
packaging/npm/portboard/: README.md  package.json
packaging/npm/portboard/lib/: launcher.js
packaging/npm/portboard/test/: launcher.test.js
packaging/pyinstaller/: portboard.spec
src/portboard/: __init__.py  __main__.py  bootstrap.py  cli.py
src/portboard/adapters/: __init__.py  desktop.py
src/portboard/adapters/containers/: __init__.py  docker_cli.py
src/portboard/adapters/http/: __init__.py  httpx_probe.py
src/portboard/adapters/project/: __init__.py  git_resolver.py
src/portboard/adapters/system/: lan_addresses.py  process_controller.py  psutil_scanner.py
src/portboard/application/: __init__.py  actions.py  contracts.py  discover.py  errors.py
src/portboard/domain/: __init__.py  models.py
src/portboard/presentation/: __init__.py  json_output.py
src/portboard/presentation/tui/: __init__.py  app.py  formatters.py  portboard.tcss  screens.py  state.py  widgets.py
tests/: test_cli.py
tests/contract/: test_architecture.py  test_cli_contract.py  test_distribution_metadata.py  test_install_script.py  test_json_output.py
tests/integration/: test_git_resolver_integration.py  test_httpx_probe_integration.py  test_system_scanner.py
tests/unit/: test_actions.py  test_desktop.py  test_discover.py  test_docker_cli.py  test_httpx_probe.py  test_lan_addresses.py  test_process_controller.py  test_psutil_scanner.py  test_tui_app.py  test_tui_state.py
