[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portboard"
version = "0.1.0a1"
description = "A terminal dashboard for local development services"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "LeonPure" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "httpx>=0.27",
  "psutil>=7.0",
  "qrcode>=8.0",
  "textual>=0.86",
]

[dependency-groups]
dev = [
  "mypy>=1.14",
  "pytest>=8.0",
  "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/LeonPure/portboard"
Repository = "https://github.com/LeonPure/portboard"
Issues = "https://github.com/LeonPure/portboard/issues"

[project.scripts]
portboard = "portboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/portboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
